tests/compile-fail/enum.rs
#[macro_use] extern crate bevy_fn_plugin;

#[bevy_plugin]
enum Enum {
    Foo,
    Bar,
}

fn main() {}
