tests/compile-fail/enum.stderr
error: expected `fn`
 --> tests/compile-fail/enum.rs:4:1
  |
4 | enum Enum {
  | ^^^^
